working with mock data

--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
+<!--index.html-->
 <!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link id="theme-css" rel="stylesheet" href="/light.css" />
     <title>Yo yo</title>
   </head>
   <body>
