--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       rel="stylesheet" 
       integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" 
       crossorigin="anonymous" />
-    <title>Yo yo</title>
+    <title>It's Alive!</title>
   </head>
   <body>
     <div id="root"></div>
